# vaz-bills-ai

./: .gitignore  PROMPT.md  pyproject.toml
src/: mapping.py  pipeline.py
src/extraction/: __init__.py  client.py  errors.py  extractor.py  images.py  prompt.py  schema.py  validators.py
src/rendering/: __init__.py  models.py  renderer.py
src/rendering/static/: styles.css
src/rendering/templates/: devis.html
tests/: conftest.py  test_extractor.py  test_mapping.py  test_validators.py
vaz-devis/: README.md  models.py  render.py  requirements.txt
vaz-devis/static/: styles.css
